--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "dwt-vue-simple",
-  "version": "0.1.0",
-  "private": true,
+  "name": "dwt-vite-vue3-simple",
+  "version": "0.0.0",
   "scripts": {
-    "serve": "ncp node_modules/dwt/dist public/dwt-resources && vue-cli-service serve",
-    "build": "vue-cli-service build&& ncp node_modules/dwt/dist dist/dwt-resources",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
     "dwt": "17.1.12",
-    "ncp": "^2.0.0",
-    "vue": "^2.6.11"
+    "vue": "^3.2.16"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vitejs/plugin-vue": "^1.9.3",
+    "vite": "^2.6.4"
   }
 }
